# dayhoff

./: .amltconfig  .amltignore  .gitignore  =1.2.0  Dockerfile  EDA.ipynb  README.md  SUPPORT.md  amlt_config_export_fastas.yaml  amlt_config_upload_datasets.yaml  package.sh  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: codeql.yml
analysis/: clusters.py  compare_distributions.ipynb  compile_cas9_fidelity.py  compile_dayhoffref.py  compile_msa_fidelity.py  create-fasta-sample.py  embed.py  evodiff_msa.py  evodifff_scaffolding.py  extract_sequences.py  extract_test_fastas.py  fidelity.py  fig-s4.py  fig-s5.py  figure2b+d.py  figure2c.py  foldseek_analysis.py  fpd.py  generate.py  generate_cas9.py  gigaref.py  gigaref_clusters.py  gigaref_singles.py  gigaref_to_jsonl.py  mmd.py  perplexity.py  pfam.py  pick_test_msas.py  plot_fidelity.py  plot_metrics.py  plot_mmd.py  plot_scaffolding.py  plot_valid.py  plot_zs.py  protmamba.py  query_from_homologs.py  reorg_msas.py  sample-clustered-splits.py  sample_sequences.py  sample_uniref.py  (+7 more)
analysis/ccmgen/: Snakefile
analysis/scaffolding/: README.md  dayhoff_generate_scaffolds.py  evodifff_generate_scaffolds.py  extract_motif_sequences.py  foldseek_analysis.py  organize_scaffold_outputs.py  rfdiff.csv  rmsd_all_models.sh  rmsd_analysis.py  run_all_foldseek.sh  run_homology.py  run_homology.sh  score_scaffolds.py
configs/: jamba100M-augment.json  jamba100M-cooldown.json  jamba100M-msa.json  jamba100M-uniref90.json  jamba3B-cooldown.json  jamba3B-msa-seq.json  jamba3B-msa.json  jamba3B-uniref90.json  jamba52B-msa-seq.json  jamba900M-msa.json  jamba900M-uniref90.json
data/: rf_diffusion_benchmark.csv
datasets/backboneref/pydssp/: pydssp_parallel.yaml
datasets/backboneref/rfdiffusion/amulet/: parallel.yaml
datasets/br/foldseek/: clust_synalone.yaml  clust_together.yaml  cluster_pdb_alone.yaml  parallell_search.yaml
datasets/br/omegafold/: Dockerfile  parallel.yaml  single.yaml
datasets/br/pmpnn/: Dockerfile  base_parallel.yaml
datasets/br/pydssp/: Dockerfile
datasets/br/rfdiffusion/: Dockerfile  gen_rfdiff.py
datasets/br/rfdiffusion/amulet/: Dockerfile.amulet  job.yaml
datasets/gigaref/: Snakefile  dedup.py  extract_private.py  extract_reps.py  extract_rtest_and_valid.py  lengths_and_offsets.py  splits_all.py
datasets/hf-dataprep/: export-fasta-generator.py  export-fasta.py  export-pdb.py  models-to-hub.py  split-files.py  upload-folder-to-hf-hub.py
datasets/openproteinset/: Snakefile  uniref_splits.py  utils.py
dayhoff/: DayhoffDataset.py  analysis_utils.py  collators.py  datasets.py  model.py  tokenizers.py  utils.py
examples/: generate.py  score.py
notebooks/: compare_distributions.ipynb  hf_tests.ipynb  rename_models.ipynb
src/: cgenerate.py  create-fasta-sample.py  export-fasta.py  generate-hf.py  generate.py  generate_from_homologs.py  get_hf_repo_files.py  hf_tests.ipynb  jamba3B-uniref50.json  models-to-hub.py  scaffold.py  train-msa.py  train.py  upload-folder-to-hf-hub.py  upload_folder_to_hf_hub.py  valid-msa.py  valid.py  valid_position.py
src/dataprep/: export-arrow.py  export-fasta-generator.py  export-fasta.py  get_hf_repo_files.py  models-to-hub.py  upload-folder-to-hf-hub.py
src/hf-dataprep/: export-arrow.py  get_hf_repo_files.py  upload-folder-to-hf-hub.py
